syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message BoundingSphere_proto
{	
	repeated float poData = 1;
	optional float rad  = 2;
}

